# ai-eval-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_eval_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
baselines/: eval_baseline.json
datasets/: classification.jsonl  extraction.jsonl
eval_harness/: __init__.py  ci_summary.py  llm.py  metrics.py  prompts.py  regression_gate.py  runner.py  types.py
eval_harness/prompts/: classify.md  extract_json.md
tests/: test_ci_summary.py  test_metrics.py  test_regression_gate.py  test_runner_mock.py
